--- a/src/templates/main.twig
+++ b/src/templates/main.twig
@@ -3,8 +3,7 @@
   <head>
       <meta http-equiv="content-type" content="text/html; charset=windows-1250">
       <title>{{ title }}</title>
-      <!-- // ico generated at https://avatars.dicebear.com/ and then converted  -->
-      <link rel="icon" href="phpboilerplate.png">
+      <link rel="icon" href="php-boilerx32">
       <!-- // style sheet comes from https://andybrewer.github.io/mvp/ -->
       <link href="css/mvp.css" rel="stylesheet">
   </head>
